name:                pet
version:             0.1.0.0
-- synopsis: A small pet simulation game.
-- description: A small pet simulation game written in Haskell attempting to adhere to limitations imposed by the Game Boy.
homepage:            https://github.com/kokichis/pet#readme
license:             BSD3
license-file:        LICENSE
author:              "Rose"
maintainer:          rose@lain.org.uk
copyright:           2017 Rose
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pet
                     , SDL.Map
                     , SDL.Tilesheet
                     , Control.Monad.SurfaceT
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , mtl
                     , transformers
  default-language:    Haskell2010

executable pet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pet
                     , filepath
                     , sdl2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kokichis/pet
