cabal-version:      2.4
name:               pet
version:            0.1.0.0
synopsis:           A small pet simulation game.
description:
  A small pet simulation game written in Haskell attempting to adhere to limitations imposed by the Game Boy.

homepage:           https://github.com/fosu/pet#readme
bug-reports:        https://github.com/fosu/pet/issues
author:             Rose
maintainer:         example@example.com
copyright:          2017 Rose

-- license:            EULA
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md
data-dir:           assets
data-files:         house.map, tileset_alt.bmp, tileset.bmp

source-repository head
  type:     git
  location: https://github.com/fosu/pet

library
  exposed-modules:
    Pet
    SDL.TileMap
    SDL.Tilesheet

  other-modules:    Paths_pet
  hs-source-dirs:   src
  build-depends:
    , base  >=4.7 && <5
    , sdl2

  default-language: Haskell2010

executable pet
  main-is:          Main.hs
  other-modules:    Paths_pet
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base          >=4.7 && <5
    , containers
    , directory
    , filepath
    , mtl
    , pet
    , sdl2
    , transformers

  default-language: Haskell2010
